--- a/TagApiFrontend/MainWindow.xaml
+++ b/TagApiFrontend/MainWindow.xaml
@@ -5,8 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TagApiFrontend"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="800">
+    <Window.Resources>
+        <Style x:Key="input">
+            <Setter Property="Control.Margin" Value="10"/>
+            <Setter Property="Control.HorizontalAlignment" Value="Left"/>
+            <Setter Property="Control.VerticalAlignment" Value="Center"/>
+        </Style>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="320"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid x:Name="LayoutRoot" Grid.Column="0" Background="#555555" Height="Auto" Width="Auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="150" />
+                <RowDefinition Height="160" />
+                <RowDefinition Height="100"/>
+            </Grid.RowDefinitions>
+            <TextBlock Grid.Row="0"
+               FontWeight="Bold" FontSize="40"
+               Text="Mon Api Tag" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Grid x:Name="FormLayoutGrid" Grid.Row="1" Margin="30, 10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Coordonnées X" Style="{StaticResource input}"/>
+                <TextBox Grid.Row="0" Grid.Column="1" Margin="10"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Coodonnées Y" Style="{StaticResource input}"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Margin="10"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Distance" Style="{StaticResource input}"/>
+                <TextBox Grid.Row="2" Grid.Column="1" Margin="10"/>
+            </Grid>
+            <Button Grid.Row="2"
+                    Name="btn2"
+                    Background="LightBlue"
+                    BorderBrush="Black"
+                    BorderThickness="1"
+                    ClickMode="Press"
+                    Height="30"
+                    Width="200"
+                    VerticalAlignment="Center" Click="Btn2_Click">
+                Rechercher
+            </Button>
+        </Grid>
+        <TextBlock Name="Content" Grid.Column="1">
+            
+        </TextBlock>
     </Grid>
 </Window>
